# mcp-gateway

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CIRCUIT_BREAKER_IMPLEMENTATION.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-EE.md  README.md  SECURITY.md  demo.tape
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  docker.yml  release.yml
benches/: gateway_benchmarks.rs
benchmarks/: public_claims.json  token_savings.py
capabilities/: README.md
capabilities/automation/: desktop_event_bus.yaml
capabilities/communication/: slack_post_message.yaml
capabilities/developer/: github_create_issue.yaml
capabilities/examples/: check_weather.yaml  github_graphql.yaml  github_integration.yaml  jsonrpc_example.yaml  linear_integration.yaml
capabilities/finance/: ecb_exchange_rates.yaml  stripe_charges.yaml  stripe_create_payment_intent.yaml
capabilities/google/: calendar_create_event.yaml  calendar_free_slots.yaml  calendar_get_attachment.yaml  calendar_list_events.yaml  contacts_list.yaml  contacts_search.yaml  drive_download.yaml  drive_list.yaml  gmail_batch_modify.yaml  gmail_get_attachment.yaml  gmail_get_message.yaml  gmail_labels.yaml  gmail_modify.yaml  gmail_profile.yaml  gmail_save_attachment.yaml  gmail_search.yaml  tasks_list.yaml  youtube_history.yaml  youtube_search.yaml  youtube_subscription_videos.yaml  youtube_subscriptions.yaml
capabilities/knowledge/: gemini_embedding.yaml  weather.yaml
capabilities/linear/: add_comment.yaml  attach_url.yaml  create_issue.yaml  create_project.yaml  create_webhook.yaml  get_issue.yaml  get_teams.yaml  linear_add_comment.yaml  linear_attach_url.yaml  linear_comment_integration.yaml  linear_create_issue.yaml  linear_create_project.yaml  linear_create_webhook.yaml  linear_get_issue.yaml  linear_get_teams.yaml  linear_list_issues.yaml  linear_list_projects.yaml  linear_search_issues.yaml  linear_update_issue.yaml  linear_viewer.yaml  list_issues.yaml  list_projects.yaml  search_issues.yaml  update_issue.yaml  viewer.yaml
capabilities/media/: audio_transcribe.yaml  audio_tts.yaml  image_to_text.yaml  screenshot_url.yaml
capabilities/productivity/: box_extract.yaml  confluence_search.yaml  github_create_pr.yaml  gws_calendar_events.yaml  gws_calendar_insert.yaml  gws_chat_send.yaml  gws_docs_read.yaml  gws_docs_write.yaml  gws_drive_list.yaml  gws_drive_upload.yaml  gws_gmail_forward.yaml  gws_gmail_reply.yaml  gws_gmail_search.yaml  gws_gmail_send.yaml  gws_gmail_triage.yaml  gws_gmail_watch.yaml  gws_sheets_append.yaml  gws_sheets_read.yaml  gws_tasks_create.yaml  gws_tasks_list.yaml  jira_search.yaml  notion_create_page.yaml  notion_search.yaml  openpencil_design.yaml  salesforce_query.yaml
capabilities/utility/: recipe_search.yaml
capabilities/verification/: metacognition.yaml  pact_contracts.yaml
docs/: BENCHMARKS.md  COMMUNITY_REGISTRY.md  DEPLOYMENT.md  OPENAPI_IMPORT.md  OWASP_AGENTIC_AI_COMPLIANCE.md  QUICKSTART.md  REMOTE_BACKENDS.md  SECURITY_AUDIT.md  WEBHOOKS.md  competitive-analysis-gpt54.md  show-hn.md
docs/adr/: ADR-001-inter-agent-message-signing.md  ADR-002-a2a-transport-adapter.md
docs/blog/: security-aware-mcp-gateway.md
docs/design/: BPD_DSL_DESIGN.md  DISTRIBUTED_GATEWAY.md  LLM_KEY_SERVER.md  RFC-0032-provider-transform-playbook.md  RFC-0043-llm-key-server.md  RFC-0051-mtls-tool-access.md  RFC-0060-webui-management.md  RFC-0070-universal-config-export.md  RFC-0071-security-firewall.md  RFC-0072-semantic-tool-search.md  RFC-0073-context-aware-tool-profiles.md  RFC-0074-auto-capability-discovery.md  RFC-0075-tool-cost-governance.md  RFC-0080-systematic-improvements.md  RFC-0081-intelligent-tool-surfacing.md
docs/plans/: webui-management.md
examples/: circuit-breaker.yaml  gateway-full.yaml  per-client-tool-scopes.yaml  playbook-morning-briefing.yaml  transform-example.yaml
npm/: package.json  run.js
registry/: index.json
registry/developer/: npm_package.yaml  pypi_package.yaml
registry/entertainment/: musicbrainz_search.yaml  tmdb_search.yaml  tmdb_trending.yaml
registry/finance/: exchangerate_convert.yaml  prh_company.yaml  sec_edgar_filings.yaml
registry/food/: openfoodfacts_product.yaml  recipe_search.yaml
registry/geo/: nominatim_geocode.yaml  nominatim_reverse.yaml
registry/reference/: air_quality.yaml  open_library_book.yaml  qr_generate.yaml  semantic_scholar.yaml  timezone_convert.yaml  wikipedia_summary.yaml
registry/search/: hackernews_item.yaml  hackernews_stories.yaml  reddit_search.yaml
src/: cache.rs  cache_key.rs  cli.rs  commands.rs  config.rs  config_persistence.rs  config_reload.rs  context_compression.rs  cost_accounting.rs  error.rs  hashing.rs  idempotency.rs  kill_switch.rs  lib.rs  main.rs  main.rs.bak2  metrics.rs  playbook.rs  playbook.rs.bak  ranking.rs  registry.rs  routing_profile.rs  secret_injection.rs  session_sandbox.rs  session_sandbox_tests.rs  simhash.rs  simhash_tests.rs  stats.rs  tool_registry.rs  tracing_context.rs  transform.rs  transform.rs.bak  tunnel.rs
src/backend/: mod.rs
src/capability/: backend.rs  definition.rs  executor.rs  loader.rs  mod.rs  openapi.rs  parser.rs  schema_validator.rs  validator.rs  watcher.rs
src/chains/: checkpoint.rs  executor.rs  interpolation.rs  mod.rs  observability.rs  retry.rs  types.rs
src/cli/: completion.rs  invoke.rs  mod.rs  skills.rs  subcommands.rs
src/commands/: add_remove.rs  config_export.rs  mod.rs  paths.rs  plugin.rs  setup.rs  skills.rs  stats.rs  upgrade.rs
src/config/: features.rs  mod.rs  tests.rs
src/config_reload/: mod.rs  tests.rs
src/cost_accounting/: config.rs  enforcer.rs  mod.rs  persistence.rs  registry.rs  suggestions.rs  tests.rs
src/discovery/: config_scanner.rs  mod.rs  process_scanner.rs
src/failsafe/: circuit_breaker.rs  health.rs  retry.rs
tests/: auth_tests.rs  backend_tests.rs  cli_config_export.rs  cross_feature_tests.rs  firewall_integration.rs  public_claims_validation.rs  security_tests.rs  stdio_tests.rs  tool_scope_tests.rs  webui_management_tests.rs
(+185 files in other folders)
